# Workspace-Template

./: README.md
config.vscode/: launch.json  settings.json  tasks.json
cpp-workspace/: CMakeLists.txt  CMakePresets.json  meta.json
cpp-workspace/base/: .gitignore  CMakePresets.json
cpp-workspace/default/: CMakeLists.txt  CMakePresets.json
cpp-workspace/default/include/: header.hpp  print.hpp
cpp-workspace/default/source/: CMakeLists.txt  main.cpp
cpp-workspace/lib/: CMakeLists.txt
cpp-workspace/lib/#cpp#/: CMakeLists.txt
cpp-workspace/lib/#cpp#/include/#cpp#/: #cpp#.h
cpp-workspace/lib/#cpp#/source/: #cpp#.cpp
cpp-workspace/lib/cmake/: config.cmake.in  helpers.cmake
cpp-workspace/lib/example/: CMakeLists.txt  main.cpp
cpp-workspace/qt/: .gitignore  CMakeLists.txt  CMakePresets.json
cpp-workspace/qt/include/: MainWindow.h
cpp-workspace/qt/resources/: CMakeLists.txt
cpp-workspace/qt/source/: CMakeLists.txt  MainWindow.cpp  main.cpp
cpp-workspace/source/: CMakeLists.txt
schemas/: template.json
scripts/: make-project.py
scripts/data_types/: config_template.py  exceptions.py  helpers.py  template.py  workspace_template.py
